--- a/acwing/.vscode/settings.json
+++ b/acwing/.vscode/settings.json
@@ -13,6 +13,7 @@
         "vector": "cpp",
         "sstream": "cpp",
         "streambuf": "cpp",
-        "tuple": "cpp"
+        "tuple": "cpp",
+        "iostream": "cpp"
     }
 }
